reorganized how the api paths were structured
