# routers/routers/logRouter.js
@@ -4,7 +4,7 @@ const logController = require('../../controllers/logController');
 
 const router = express.Router();
 
-router.route('/:sheetType/:sheetId').get(logController.getLogsBySheetId).post(logController.createLogForSheet);
-router.route('/:id').patch(logController.updateLog).delete(logController.deleteLog);
+router.route('/').get(logController.getLogsForSheet).post(logController.createLogForSheet);
+router.route('/:logId').patch(logController.updateLog).delete(logController.deleteLog);
 
 module.exports = router;
